Apply a patch series from Felix Lechner to make the templating more flexible in tests. (MR: !75)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,11 @@ lintian (2.5.114) UNRELEASED; urgency=medium
     + [CL] Consistently use (eg.) "DEP 5" over "DEP-5" to match the style
       used on dep.debian.net.  (Closes: #914562)
 
+  * t/*:
+    + [CL] Apply a patch series from Felix Lechner to make the templating
+      more flexible in tests, re-using the Skeleton: statements in "desc"
+      files for more complex templating logic.  (MR: !75)
+
  -- Chris Lamb <lamby@debian.org>  Fri, 23 Nov 2018 23:39:18 +0100
 
 lintian (2.5.113) unstable; urgency=medium
