--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.115) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 26 Nov 2018 09:43:15 +0100
+
 lintian (2.5.114) unstable; urgency=medium
 
   * checks/debhelper.pm:
