--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ lintian (2.5.115) UNRELEASED; urgency=medium
   * t/runtests:
     + [CL] Apply a patch from Felix Lechner to fail tests with outdated
       specifications (ie. ./debian/debian exists).  (MR: !77)
+  * t/tests/files-multiarch-foreign-files:
+    + [CL] Apply a patch from James Clarke to fix this test on on non-amd64
+      architectures.  (MR: !78)
 
  -- Chris Lamb <lamby@debian.org>  Mon, 26 Nov 2018 09:43:15 +0100
 
