--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.115) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * t/runtests:
+    + [CL] Apply a patch from Felix Lechner to fail tests with outdated
+      specifications (ie. ./debian/debian exists).  (MR: !77)
+
  -- Chris Lamb <lamby@debian.org>  Mon, 26 Nov 2018 09:43:15 +0100
 
 lintian (2.5.114) unstable; urgency=medium
