--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-lintian (2.5.115) UNRELEASED; urgency=medium
+lintian (2.5.115) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Removed:
+      - debian-rules-makemaker-prefix-is-deprecated
 
   * checks/binaries.pm:
     + [CL] Allow packages to define an RPATH under /usr/lib/ghc/ as the
@@ -12,6 +14,9 @@ lintian (2.5.115) UNRELEASED; urgency=medium
   * checks/patch-systems.desc:
     + [CL] Downgrade package-uses-vendor-specific-patch-series from "E:" to
       "W:" as they are not RC bugs until the release of buster.
+
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to implement a universal
@@ -26,7 +31,7 @@ lintian (2.5.115) UNRELEASED; urgency=medium
     + [CL] Apply a patch from James Clarke to fix this test on non-amd64
       architectures.  (MR: !78)
 
- -- Chris Lamb <lamby@debian.org>  Mon, 26 Nov 2018 09:43:15 +0100
+ -- Chris Lamb <lamby@debian.org>  Mon, 03 Dec 2018 13:33:49 +0000
 
 lintian (2.5.114) unstable; urgency=medium
 
