Do not use a global build stamp for tests in debian/rules. (MR: !80)
Using its Makefile semantics, debian/rules implements a build stamp
when tests are run without the option 'onlyrun'. It prevents needless
re-runs, but also blocks runs that should be allowed, for example when
only the test runner has changed. (The target 'runtests' depends on
many files, but not on the t/runtest executable or any of its
imports.) The mechanism is a complete obstacle to runner development.

This commit disables the mechanism.  The build stamp is no longer
written, and the 'runtest' target is declared PHONY.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.116) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * debian/rules:
+    + [CL] Apply a patch from Felix Lechner to remove the "runtests" build
+      stamp mechanism as it blocks runs that should be allowed such as
+      when only the test runner itself has changed.  (MR: !80)
+
  -- Chris Lamb <lamby@debian.org>  Mon, 03 Dec 2018 14:56:06 +0100
 
 lintian (2.5.115) unstable; urgency=medium
