--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ lintian (2.5.116) UNRELEASED; urgency=medium
       stamp mechanism as it blocks runs that should be allowed such as
       when only the test runner itself has changed.  (MR: !80)
 
+  * t/*:
+    + [CL] Apply a patch from Felix Lechner to allow debian/rules to be
+      generated from templates in tests.  (MR: !81)
+
  -- Chris Lamb <lamby@debian.org>  Mon, 03 Dec 2018 14:56:06 +0100
 
 lintian (2.5.115) unstable; urgency=medium
