--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ lintian (2.5.116) UNRELEASED; urgency=medium
       generated from templates in tests.  (MR: !81)
     + [CL] Apply a patch from Felix Lechner to remove pre-existing metadata
       in the upstream-metadata-is-not-a-file test.  (MR: !84)
+    + [CL] Apply a patch series from Felix Lechner to provide a generalised
+      facility to make any test template set independent of the package
+      format.  (MR: !FIXME)
 
  -- Chris Lamb <lamby@debian.org>  Mon, 03 Dec 2018 14:56:06 +0100
 
