--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,10 @@ lintian (2.5.116) UNRELEASED; urgency=medium
       the fields-bugs-field-does-not-refer-to-debian-infrastructure tag's
       output.  (MR: !83)
 
+  * data/java/constants:
+    + [CL] Apply a patch from Felix Lechner to fix the "maximum existing
+      version" for the Java class file format.  (MR: !86)
+
   * debian/rules:
     + [CL] Apply a patch from Felix Lechner to remove the "runtests" build
       stamp mechanism as it blocks runs that should be allowed such as
