--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ lintian (2.5.116) UNRELEASED; urgency=medium
     + [CL] Apply a patch series from Felix Lechner to provide a generalised
       facility to make any test template set independent of the package
       format.  (MR: !82)
+    + [CL] Apply a patch series from Felix Lechner to support
+      suite-independent test templates.  (MR: !88)
 
  -- Chris Lamb <lamby@debian.org>  Mon, 03 Dec 2018 14:56:06 +0100
 
