--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.117) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 07 Dec 2018 10:41:09 +0100
+
 lintian (2.5.116) unstable; urgency=medium
 
   * checks/fields.pm:
