--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ lintian (2.5.117) UNRELEASED; urgency=medium
   * checks/watch-file.desc:
     + [CL] Correct grammar of the debian-watch-does-not-check-gpg-signature
       tag description.
+    + [CL] Mark debian-watch-does-not-check-gpg-signature as "experimental"
+      as it is not actionable in the vast majority of cases and is in
+      danger of diluting the output of Lintian.  (Closes: #916207)
 
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to use "skeletons" as
