--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ lintian (2.5.117) UNRELEASED; urgency=medium
       Bogatov for investigating.  (Closes: #916023)
     + [CL] Refactor, tidy and optimise various checks for the contents of
       files.
+    + [CL] Check files for references to the build path if specified in a
+      .buildinfo.  (Closes: #916021
   * checks/watch-file.desc:
     + [CL] Correct grammar of the debian-watch-does-not-check-gpg-signature
       tag description.
