--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,9 @@ lintian (2.5.117) UNRELEASED; urgency=medium
     + [CL] Mark debian-watch-does-not-check-gpg-signature as "experimental"
       as it is not actionable in the vast majority of cases and is in
       danger of diluting the output of Lintian.  (Closes: #916207)
+  * checks/systemd.pm:
+    + [CL] Don't emit systemd-service-file-missing-hardening-features for
+      Type=oneshot "services" such as mdadm(8).
 
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to use "skeletons" as
