--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ lintian (2.5.118) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [CL] The package-contains-documentation-outside-usr-share-doc tag
+      should accept files under "/usr/share/help"; these are being
+      installed by a number of GNOME packages.  Thanks to Jeremy Bicha for
+      the report.  (Closes: #916497)
+
  -- Chris Lamb <lamby@debian.org>  Fri, 14 Dec 2018 19:34:34 +0100
 
 lintian (2.5.117) unstable; urgency=medium
