--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ lintian (2.5.118) UNRELEASED; urgency=medium
       version-substvar-for-external-package tag require versioned provides.
       (Closes: #833608)
 
+  * data/systemd/wantedby-whitelist:
+    + [CL] Add 'sleep.target' to the list of valid WantedBy systemd
+      targets.
+
  -- Chris Lamb <lamby@debian.org>  Fri, 14 Dec 2018 19:34:34 +0100
 
 lintian (2.5.117) unstable; urgency=medium
