Remove diff directories and contents for two tests. (MR: !103)
The `./diff` directory exists to test specific features of patch
systems when upstream sources that that are unpackaged when building a
debian patch differ from contents in a nearby `orig.tar.gz` tarfile.
In the present cases, the contents of the `./diff` directories are
identical to that of `./orig`. Thus, there are no differences. Also,
neither test seems to exercise a potential false positive related to
the feature. Both `./diff` directories are removed.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,10 @@ lintian (2.5.118) UNRELEASED; urgency=medium
     + [CL] Add default, network-online and sleep' to the list of valid
       WantedBy systemd targets.
 
+  * t/testS:
+    + [CL] Apply a patch from Felix Lechner to remove the "diff" directory
+      and contents for two tests.  (MR: !103)
+
  -- Chris Lamb <lamby@debian.org>  Fri, 14 Dec 2018 19:34:34 +0100
 
 lintian (2.5.117) unstable; urgency=medium
