debian/changelog: Correct "environment" typo.

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,7 +46,7 @@ lintian (2.5.118) UNRELEASED; urgency=medium
   * t/*:
     + [CL] Apply a patch series from Felix Lechner to capture log output in
       tests using Capture::Tiny as it works better in a multi-threaded
-      environent.  (MR: !102)
+      environment.  (MR: !102)
     + [CL] Apply a patch from Felix Lechner to remove the "diff" directory
       and contents for two tests.  (MR: !103)
 
