--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ lintian (2.5.118) UNRELEASED; urgency=medium
   * data/systemd/wantedby-whitelist:
     + [CL] Add default, network-online and sleep' to the list of valid
       WantedBy systemd targets.
+  * doc/lintianrc.example:
+    + [CL] Clarify that spaces are valid in variable assignments.  Thanks
+      to Salvo Tomaselli for the report.  (Closes: #917120)
 
   * CONTRIBUTING.md:
     + [CL] Update a number of references to Salsa, recommending merge
